# graphcore-cloud-tools

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .style.yapf  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-benchmark.txt  requirements-common.txt  requirements-dev.txt  requirements-jupyter.txt  requirements-logger.txt  requirements-precommit.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: copyright-header-check.yaml  pre-commit-checks.yaml  pytest.yaml  yapf-check.yaml
examples_utils/: __init__.py  __main__.py
examples_utils/benchmarks/: README.md  __init__.py  benchmark_creation_guide.md  changelog.md  command_utils.py  custom_metrics.py  distributed_utils.py  environment_utils.py  logging_utils.py  metrics_utils.py  monitoring_utils.py  notebook_utils.py  profiling_utils.py  requirements.txt  requirements_utils.py  run_benchmarks.py  slurm_utils.py
examples_utils/load_lib/: __init__.py  load_lib.py
examples_utils/load_lib_utils/: __init__.py  cli.py  cppimport_backports.py  cppimport_safe.py  load_lib_utils.py
examples_utils/parsing/: __init__.py  (+2 more)
graphcore_cloud_tools/: __init__.py  __main__.py
tests/: test_benchmarks.py  test_config_logger.py  test_custom_metrics.py  test_custom_ops.py  test_file_argparser.py  test_gclogger.py  test_load_lib.py  test_main.py  test_metadata.py  test_notebook_utils.py  test_pinned_requirements.py  test_requirements_variants.py  test_sdk_version.py  test_sdk_version_hash.py  test_symlink.py  testutils.py
(+40 files in other folders)
