[metadata]
name = examples-utils
#version = 0.1.0
description = `Utils and common code for Graphcore's example applications`
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Graphcore Ltd.
url = https://github.com/graphcore/examples-utils
#download_urls = https://pypi.org/project/examples-utils
project_urls =
	#Documentation = https://graphcore.github.io/examples-utils
	Code = https://github.com/graphcore/examples-utils
	#Issue tracker = https://github.com/graphcore/examples-utils/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
#python_requires = >=3.6, <3.9
#install_requires =
#    numpy
#    more_itertools
